# nextjs_fastapi_crud

backend/: .gitignore  Dockerfile  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yaml
backend/dev/nextjs_fastapi_crud_backend_api/: .env.dev  Dockerfile.dev  README.md  docker-compose.dev.yml  pyproject.toml
backend/dev/nextjs_fastapi_crud_backend_api/db/: .env.dev
backend/dev/nextjs_fastapi_crud_backend_api/nextjs_fastapi_crud_backend_api/: main.py  migrate_db.py
backend/dev/nextjs_fastapi_crud_backend_api/nextjs_fastapi_crud_backend_api/core/: config.py  todo.py
backend/dev/nextjs_fastapi_crud_backend_api/nextjs_fastapi_crud_backend_api/cruds/: todo.py
backend/dev/nextjs_fastapi_crud_backend_api/nextjs_fastapi_crud_backend_api/db/: todo.py
backend/dev/nextjs_fastapi_crud_backend_api/nextjs_fastapi_crud_backend_api/dependencies/: todo.py
backend/dev/nextjs_fastapi_crud_backend_api/nextjs_fastapi_crud_backend_api/models/: todo.py
backend/dev/nextjs_fastapi_crud_backend_api/nextjs_fastapi_crud_backend_api/routers/: todo.py
backend/dev/nextjs_fastapi_crud_backend_api/nextjs_fastapi_crud_backend_api/schemas/: todo.py
backend/dev/nextjs_fastapi_crud_backend_api/restclient/mysql/: delete.rest  get.rest  get_by_name.rest  post.rest  put.rest
backend/dev/nextjs_fastapi_crud_backend_api/web/: nginx.conf
backend/prod/fastapi_backend/: .gitignore  docker-compose.prod.yaml  pyproject.toml
backend/prod/fastapi_backend/fastapi_backend/: Dockerfile.prod  requirements.txt
frontend/: .env.development  .gitignore  Dockerfile.prod  README.md  (+5 more)
(+31 files in other folders)
