[tool.poetry]
name = "nextjs_fastapi_crud_backend_api"
version = "0.1.0"
description = ""
authors = ["removable4463 <removable4463@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
cryptography = "^41.0.5"
sqlalchemy = "^2.0.23"
aiomysql = "^0.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
plyer = "^2.1.0"
debugpy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
