[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = ""
authors = ["removable4463 <removable4463@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "1.4.20"
aiomysql = "^0.2.0"
pymysql = "^1.1.0"
cryptography = "^41.0.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"
plyer = "^2.1.0"
debugpy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
